# rust-graphql-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: column_mapping.rs  database_schema.rs  entities_generator.rs  graphql_generator.rs  lib.rs  main.rs  toml_generator.rs
src/graphql/: entities.rs  mod.rs  orm_data_loader.rs  root_node.rs  type_filter.rs
src/types/: column_meta.rs  foreign_key_meta.rs  mod.rs  table_meta.rs
