[package]
name = "rust_graphql_generator_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
heck = "0.4.0"
proc-macro2 = "1.0.37"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
sea-orm-codegen = "0.7.0"

[dependencies.sea-orm]
version = '0.7.0'

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-async-std-native-tls", "sqlite"]

[dependencies.sea-schema]
version = "0.7.1"
default-features = false
features = ["discovery", "debug-print", "sqlx-sqlite", "runtime-async-std-native-tls"]